app/styles/components/_project-history.scss
$list-item-padding: rem-calc(10);
$project-history-red: #e08989;
$project-history-amber: #f4d95d;
$project-history-green: #8ab67d;
$project-history-dark-green: #609489;
$project-history-orange: #e79a77;
$project-history-blue: #8ba6da;
$project-history-grey: #999999;
$project-history-brown: #c9a877;
$project-history-baby-blue: #54acb0;

.project-history {
  a {
    color: $header-font-color;
  }

  tr {
    .codename {
      color: $small-font-color;
    }

    .outreach-status {
      text-align: center;

      i {
        @include icon('circle');

        &.outreach-cleared,
        &.found {
          color: $project-history-red;
        }

        &.contacted {
          color: $project-history-amber;
        }

        &.sent-terms {
          color: $project-history-blue;
        }

        &.available-to-client {
          color: $project-history-green;
        }

        &.used-by-client {
          color: $project-history-dark-green;
        }

        &.partial-terms {
          color: $project-history-orange;
        }

        &.outreach-forbidden,
        &.do-not-call,
        &.not-right {
          color: $project-history-grey;
        }

        &.not-on-cid,
        &.some-companies-on-cid {
          color: $project-history-brown;
        }

        &.all-companies-on-cid {
          color: $project-history-baby-blue;
        }
      }
    }

    .avatar {
      margin: 0;
    }
  }
}

